--- a/style2.css
+++ b/style2.css
@@ -14,6 +14,15 @@
 	border-color: rgb(230,228,242);
 }
 
+#border_top {
+	border-style: solid;
+	border-width: 5px;
+	border-color: rgb(230,228,242);
+	border-bottom: 0px;
+	border-left: 0px;
+	border-right: 0px;
+}
+
 #border p.top {
 	background-color: rgb(230,228,242);
 	border-bottom: 2px solid #FFF;
